3822B1FI1/9_gelu_ocl/drozhdinov_dmitriy/log.txt
In file included from /home/crazyproger/sandbox/cuda-2025/3822B1FI1/9_gelu_ocl/drozhdinov_dmitriy/gelu_ocl.cpp:3:
/usr/include/CL/opencl.hpp:437:112: note: ‘#pragma message: opencl.hpp: CL_HPP_TARGET_OPENCL_VERSION is not defined. It will default to 300 (OpenCL 3.0)’
  437 | # pragma message("opencl.hpp: CL_HPP_TARGET_OPENCL_VERSION is not defined. It will default to 300 (OpenCL 3.0)")
      |                                                                                                                ^
/home/crazyproger/sandbox/cuda-2025/3822B1FI1/9_gelu_ocl/drozhdinov_dmitriy/gelu_ocl.cpp: In function ‘std::vector<float> GeluOCL(const std::vector<float>&)’:
/home/crazyproger/sandbox/cuda-2025/3822B1FI1/9_gelu_ocl/drozhdinov_dmitriy/gelu_ocl.cpp:39:26: error: too many arguments to function ‘double sqrt(double)’
   39 |         float s2pi = sqrt(2.0f, M_PI);
      |                      ~~~~^~~~~~~~~~~~
In file included from /usr/include/features.h:486,
                 from /usr/include/x86_64-linux-gnu/c++/11/bits/os_defines.h:39,
                 from /usr/include/x86_64-linux-gnu/c++/11/bits/c++config.h:586,
                 from /usr/include/c++/11/bits/stl_algobase.h:59,
                 from /usr/include/c++/11/vector:60,
                 from /home/crazyproger/sandbox/cuda-2025/3822B1FI1/9_gelu_ocl/drozhdinov_dmitriy/gelu_ocl.h:4,
                 from /home/crazyproger/sandbox/cuda-2025/3822B1FI1/9_gelu_ocl/drozhdinov_dmitriy/gelu_ocl.cpp:1:
/usr/include/x86_64-linux-gnu/bits/mathcalls.h:143:1: note: declared here
  143 | __MATHCALL (sqrt,, (_Mdouble_ __x));
      | ^~~~~~~~~~
